--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Agile Poker</title>
+  <title>FT Poker</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" href="/favicon.ico">
   <meta name="theme-color" content="#360643">
